@@ -25,11 +25,25 @@
 
 package com.sun.tools.javac.file;
 
+import static java.nio.file.FileVisitOption.FOLLOW_LINKS;
+
+import static javax.tools.StandardLocation.*;
+
+import com.sun.tools.javac.file.RelativePath.RelativeDirectory;
+import com.sun.tools.javac.file.RelativePath.RelativeFile;
+import com.sun.tools.javac.main.Option;
+import com.sun.tools.javac.resources.CompilerProperties.Errors;
+import com.sun.tools.javac.util.Assert;
+import com.sun.tools.javac.util.Context;
+import com.sun.tools.javac.util.Context.Factory;
+import com.sun.tools.javac.util.DefinedBy;
+import com.sun.tools.javac.util.DefinedBy.Api;
+import com.sun.tools.javac.util.List;
+import com.sun.tools.javac.util.ListBuffer;
+
 import java.io.File;
 import java.io.IOException;
 import java.io.UncheckedIOException;
-import java.lang.module.Configuration;
-import java.lang.module.ModuleFinder;
 import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
@@ -37,7 +51,6 @@ import java.net.URL;
 import java.nio.CharBuffer;
 import java.nio.charset.Charset;
 import java.nio.file.FileSystem;
-import java.nio.file.FileSystems;
 import java.nio.file.FileVisitOption;
 import java.nio.file.FileVisitResult;
 import java.nio.file.Files;
@@ -70,45 +83,26 @@ import javax.tools.JavaFileManager;
 import javax.tools.JavaFileObject;
 import javax.tools.StandardJavaFileManager;
 
-import com.sun.tools.javac.file.RelativePath.RelativeDirectory;
-import com.sun.tools.javac.file.RelativePath.RelativeFile;
-import com.sun.tools.javac.main.Option;
-import com.sun.tools.javac.resources.CompilerProperties.Errors;
-import com.sun.tools.javac.util.Assert;
-import com.sun.tools.javac.util.Context;
-import com.sun.tools.javac.util.Context.Factory;
-import com.sun.tools.javac.util.DefinedBy;
-import com.sun.tools.javac.util.DefinedBy.Api;
-import com.sun.tools.javac.util.List;
-import com.sun.tools.javac.util.ListBuffer;
-
-import static java.nio.charset.StandardCharsets.US_ASCII;
-import static java.nio.file.FileVisitOption.FOLLOW_LINKS;
-
-import static javax.tools.StandardLocation.*;
-
 /**
- * This class provides access to the source, class and other files
- * used by the compiler and related tools.
+ * This class provides access to the source, class and other files used by the compiler and related
+ * tools.
  *
- * <p><b>This is NOT part of any supported API.
- * If you write code that depends on this, you do so at your own risk.
- * This code and its internal interfaces are subject to change or
- * deletion without notice.</b>
+ * <p><b>This is NOT part of any supported API. If you write code that depends on this, you do so at
+ * your own risk. This code and its internal interfaces are subject to change or deletion without
+ * notice.</b>
  */
 public class JavacFileManager extends BaseFileManager implements StandardJavaFileManager {
 
+    @SuppressWarnings("cast")
     public static char[] toArray(CharBuffer buffer) {
-        if (buffer.hasArray())
-            return buffer.compact().flip().array();
-        else
-            return buffer.toString().toCharArray();
+        if (buffer.hasArray()) return ((CharBuffer) buffer.compact().flip()).array();
+        else return buffer.toString().toCharArray();
     }
 
     private FSInfo fsInfo;
 
     private static final Set<JavaFileObject.Kind> SOURCE_OR_CLASS =
-        Set.of(JavaFileObject.Kind.SOURCE, JavaFileObject.Kind.CLASS);
+            EnumSet.of(JavaFileObject.Kind.SOURCE, JavaFileObject.Kind.CLASS);
 
     protected boolean symbolFileEnabled;
 
@@ -138,34 +132,30 @@ public class JavacFileManager extends BaseFileManager implements StandardJavaFil
      * indexing is costly for very large classpaths, this can result in a significant savings.
      */
     private Map<Location, Map<RelativeDirectory, java.util.List<PathAndContainer>>>
-        pathsAndContainersByLocationAndRelativeDirectory = new HashMap<>();
+            pathsAndContainersByLocationAndRelativeDirectory = new HashMap<>();
 
     /** Containers that have no indexing by {@link RelativeDirectory}, keyed by {@link Location}. */
     private Map<Location, java.util.List<PathAndContainer>> nonIndexingContainersByLocation =
-        new HashMap<>();
+            new HashMap<>();
 
-    /**
-     * Register a Context.Factory to create a JavacFileManager.
-     */
+    /** Register a Context.Factory to create a JavacFileManager. */
     public static void preRegister(Context context) {
-        context.put(JavaFileManager.class,
-                (Factory<JavaFileManager>)c -> new JavacFileManager(c, true, null));
+        context.put(
+                JavaFileManager.class,
+                (Factory<JavaFileManager>) c -> new JavacFileManager(c, true, null));
     }
 
     /**
-     * Create a JavacFileManager using a given context, optionally registering
-     * it as the JavaFileManager for that context.
+     * Create a JavacFileManager using a given context, optionally registering it as the
+     * JavaFileManager for that context.
      */
     public JavacFileManager(Context context, boolean register, Charset charset) {
         super(charset);
-        if (register)
-            context.put(JavaFileManager.class, this);
+        if (register) context.put(JavaFileManager.class, this);
         setContext(context);
     }
 
-    /**
-     * Set the context for JavacFileManager.
-     */
+    /** Set the context for JavacFileManager. */
     @Override
     public void setContext(Context context) {
         super.setContext(context);
@@ -180,7 +170,8 @@ public class JavacFileManager extends BaseFileManager implements StandardJavaFil
         }
     }
 
-    @Override @DefinedBy(DefinedBy.Api.COMPILER)
+    @Override
+    @DefinedBy(DefinedBy.Api.COMPILER)
     public void setPathFactory(PathFactory f) {
         pathFactory = Objects.requireNonNull(f);
         locations.setPathFactory(f);
@@ -190,9 +181,7 @@ public class JavacFileManager extends BaseFileManager implements StandardJavaFil
         return pathFactory.getPath(first, more);
     }
 
-    /**
-     * Set whether or not to use ct.sym as an alternate to rt.jar.
-     */
+    /** Set whether or not to use ct.sym as an alternate to rt.jar. */
     public void setSymbolFileEnabled(boolean b) {
         symbolFileEnabled = b;
     }
@@ -211,23 +200,22 @@ public class JavacFileManager extends BaseFileManager implements StandardJavaFil
         return getJavaFileObjects(file).iterator().next();
     }
 
-    public JavaFileObject getFileForOutput(String classname,
-                                           JavaFileObject.Kind kind,
-                                           JavaFileObject sibling)
-        throws IOException
-    {
+    public JavaFileObject getFileForOutput(
+            String classname, JavaFileObject.Kind kind, JavaFileObject sibling) throws IOException {
         return getJavaFileForOutput(CLASS_OUTPUT, classname, kind, sibling);
     }
 
-    @Override @DefinedBy(Api.COMPILER)
-    public Iterable<? extends JavaFileObject> getJavaFileObjectsFromStrings(Iterable<String> names) {
+    @Override
+    @DefinedBy(Api.COMPILER)
+    public Iterable<? extends JavaFileObject> getJavaFileObjectsFromStrings(
+            Iterable<String> names) {
         ListBuffer<Path> paths = new ListBuffer<>();
-        for (String name : names)
-            paths.append(getPath(nullCheck(name)));
+        for (String name : names) paths.append(getPath(nullCheck(name)));
         return getJavaFileObjectsFromPaths(paths.toList());
     }
 
-    @Override @DefinedBy(Api.COMPILER)
+    @Override
+    @DefinedBy(Api.COMPILER)
     public Iterable<? extends JavaFileObject> getJavaFileObjects(String... names) {
         return getJavaFileObjectsFromStrings(Arrays.asList(nullCheck(names)));
     }
@@ -239,8 +227,7 @@ public class JavacFileManager extends BaseFileManager implements StandardJavaFil
         // Therefore we simply check that the argument is a sequence of identifiers
         // separated by ".".
         for (String s : name.split("\\.", -1)) {
-            if (!SourceVersion.isIdentifier(s))
-                return false;
+            if (!SourceVersion.isIdentifier(s)) return false;
         }
         return true;
     }
@@ -255,10 +242,7 @@ public class JavacFileManager extends BaseFileManager implements StandardJavaFil
             throw new IllegalArgumentException("Invalid packageName name: " + packageName);
     }
 
-    public static void testName(String name,
-                                boolean isValidPackageName,
-                                boolean isValidClassName)
-    {
+    public static void testName(String name, boolean isValidPackageName, boolean isValidClassName) {
         try {
             validatePackageName(name);
             if (!isValidPackageName)
@@ -271,19 +255,22 @@ public class JavacFileManager extends BaseFileManager implements StandardJavaFil
         }
         try {
             validateClassName(name);
-            if (!isValidClassName)
-                throw new AssertionError("Invalid class name accepted: " + name);
+            if (!isValidClassName) throw new AssertionError("Invalid class name accepted: " + name);
             printAscii("Valid class name: \"%s\"", name);
         } catch (IllegalArgumentException e) {
-            if (isValidClassName)
-                throw new AssertionError("Valid class name rejected: " + name);
+            if (isValidClassName) throw new AssertionError("Valid class name rejected: " + name);
             printAscii("Invalid class name: \"%s\"", name);
         }
     }
 
     private static void printAscii(String format, Object... args) {
-        String message = new String(
-                String.format(null, format, args).getBytes(US_ASCII), US_ASCII);
+        String message;
+        try {
+            final String ascii = "US-ASCII";
+            message = new String(String.format(null, format, args).getBytes(ascii), ascii);
+        } catch (java.io.UnsupportedEncodingException ex) {
+            throw new AssertionError(ex);
+        }
         System.out.println(message);
     }
 
@@ -315,7 +302,7 @@ public class JavacFileManager extends BaseFileManager implements StandardJavaFil
         try {
             attr = Files.readAttributes(realPath, BasicFileAttributes.class);
         } catch (IOException ex) {
-            //non-existing
+            // non-existing
             fs = MISSING_CONTAINER;
         }
 
@@ -339,16 +326,22 @@ public class JavacFileManager extends BaseFileManager implements StandardJavaFil
 
     private interface Container {
         /**
-         * Insert all files in subdirectory subdirectory of container which
-         * match fileKinds into resultList
+         * Insert all files in subdirectory subdirectory of container which match fileKinds into
+         * resultList
          */
-        public abstract void list(Path userPath,
-                                  RelativeDirectory subdirectory,
-                                  Set<JavaFileObject.Kind> fileKinds,
-                                  boolean recurse,
-                                  ListBuffer<JavaFileObject> resultList) throws IOException;
-        public abstract JavaFileObject getFileObject(Path userPath, RelativeFile name) throws IOException;
+        public abstract void list(
+                Path userPath,
+                RelativeDirectory subdirectory,
+                Set<JavaFileObject.Kind> fileKinds,
+                boolean recurse,
+                ListBuffer<JavaFileObject> resultList)
+                throws IOException;
+
+        public abstract JavaFileObject getFileObject(Path userPath, RelativeFile name)
+                throws IOException;
+
         public abstract void close() throws IOException;
+
         public abstract boolean maintainsDirectoryIndex();
 
         /**
@@ -358,56 +351,63 @@ public class JavacFileManager extends BaseFileManager implements StandardJavaFil
         public abstract Iterable<RelativeDirectory> indexedDirectories();
     }
 
-    private static final Container MISSING_CONTAINER =  new Container() {
-        @Override
-        public void list(Path userPath,
-                         RelativeDirectory subdirectory,
-                         Set<JavaFileObject.Kind> fileKinds,
-                         boolean recurse,
-                         ListBuffer<JavaFileObject> resultList) throws IOException {
-        }
-        @Override
-        public JavaFileObject getFileObject(Path userPath, RelativeFile name) throws IOException {
-            return null;
-        }
-        @Override
-        public void close() throws IOException {}
-        @Override
-        public boolean maintainsDirectoryIndex() {
-            return false;
-        }
-        @Override
-        public Iterable<RelativeDirectory> indexedDirectories() {
-            return List.nil();
-        }
-    };
+    private static final Container MISSING_CONTAINER =
+            new Container() {
+                @Override
+                public void list(
+                        Path userPath,
+                        RelativeDirectory subdirectory,
+                        Set<JavaFileObject.Kind> fileKinds,
+                        boolean recurse,
+                        ListBuffer<JavaFileObject> resultList)
+                        throws IOException {}
+
+                @Override
+                public JavaFileObject getFileObject(Path userPath, RelativeFile name)
+                        throws IOException {
+                    return null;
+                }
+
+                @Override
+                public void close() throws IOException {}
+
+                @Override
+                public boolean maintainsDirectoryIndex() {
+                    return false;
+                }
+
+                @Override
+                public Iterable<RelativeDirectory> indexedDirectories() {
+                    return List.nil();
+                }
+            };
 
     private final class JRTImageContainer implements Container {
 
         /**
-         * Insert all files in a subdirectory of the platform image
-         * which match fileKinds into resultList.
+         * Insert all files in a subdirectory of the platform image which match fileKinds into
+         * resultList.
          */
         @Override
-        public void list(Path userPath,
-                         RelativeDirectory subdirectory,
-                         Set<JavaFileObject.Kind> fileKinds,
-                         boolean recurse,
-                         ListBuffer<JavaFileObject> resultList) throws IOException {
+        public void list(
+                Path userPath,
+                RelativeDirectory subdirectory,
+                Set<JavaFileObject.Kind> fileKinds,
+                boolean recurse,
+                ListBuffer<JavaFileObject> resultList)
+                throws IOException {
             try {
                 JRTIndex.Entry e = getJRTIndex().getEntry(subdirectory);
-                if (symbolFileEnabled && e.ctSym.hidden)
-                    return;
-                for (Path file: e.files.values()) {
+                if (symbolFileEnabled && e.ctSym.hidden) return;
+                for (Path file : e.files.values()) {
                     if (fileKinds.contains(getKind(file))) {
-                        JavaFileObject fe
-                                = PathFileObject.forJRTPath(JavacFileManager.this, file);
+                        JavaFileObject fe = PathFileObject.forJRTPath(JavacFileManager.this, file);
                         resultList.append(fe);
                     }
                 }
 
                 if (recurse) {
-                    for (RelativeDirectory rd: e.subdirs) {
+                    for (RelativeDirectory rd : e.subdirs) {
                         list(userPath, rd, fileKinds, recurse, resultList);
                     }
                 }
@@ -420,8 +420,7 @@ public class JavacFileManager extends BaseFileManager implements StandardJavaFil
         @Override
         public JavaFileObject getFileObject(Path userPath, RelativeFile name) throws IOException {
             JRTIndex.Entry e = getJRTIndex().getEntry(name.dirname());
-            if (symbolFileEnabled && e.ctSym.hidden)
-                return null;
+            if (symbolFileEnabled && e.ctSym.hidden) return null;
             Path p = e.files.get(name.basename());
             if (p != null) {
                 return PathFileObject.forJRTPath(JavacFileManager.this, p);
@@ -431,8 +430,7 @@ public class JavacFileManager extends BaseFileManager implements StandardJavaFil
         }
 
         @Override
-        public void close() throws IOException {
-        }
+        public void close() throws IOException {}
 
         @Override
         public boolean maintainsDirectoryIndex() {
@@ -446,8 +444,7 @@ public class JavacFileManager extends BaseFileManager implements StandardJavaFil
     }
 
     private synchronized JRTIndex getJRTIndex() {
-        if (jrtIndex == null)
-            jrtIndex = JRTIndex.getSharedInstance();
+        if (jrtIndex == null) jrtIndex = JRTIndex.getSharedInstance();
         return jrtIndex;
     }
 
@@ -461,24 +458,26 @@ public class JavacFileManager extends BaseFileManager implements StandardJavaFil
         }
 
         /**
-         * Insert all files in subdirectory subdirectory of directory userPath
-         * which match fileKinds into resultList
+         * Insert all files in subdirectory subdirectory of directory userPath which match fileKinds
+         * into resultList
          */
         @Override
-        public void list(Path userPath,
-                         RelativeDirectory subdirectory,
-                         Set<JavaFileObject.Kind> fileKinds,
-                         boolean recurse,
-                         ListBuffer<JavaFileObject> resultList) throws IOException {
+        public void list(
+                Path userPath,
+                RelativeDirectory subdirectory,
+                Set<JavaFileObject.Kind> fileKinds,
+                boolean recurse,
+                ListBuffer<JavaFileObject> resultList)
+                throws IOException {
             Path d;
             try {
                 d = subdirectory.resolveAgainst(userPath);
             } catch (InvalidPathException ignore) {
-                return ;
+                return;
             }
 
             if (!Files.exists(d)) {
-               return;
+                return;
             }
 
             if (!caseMapCheck(d, subdirectory)) {
@@ -487,29 +486,33 @@ public class JavacFileManager extends BaseFileManager implements StandardJavaFil
 
             java.util.List<Path> files;
             try (Stream<Path> s = Files.list(d)) {
-                files = (sortFiles == null ? s : s.sorted(sortFiles)).toList();
+                files = (sortFiles == null ? s : s.sorted(sortFiles)).collect(Collectors.toList());
             } catch (IOException ignore) {
                 return;
             }
 
-            for (Path f: files) {
+            for (Path f : files) {
                 String fname = f.getFileName().toString();
-                if (fname.endsWith("/"))
-                    fname = fname.substring(0, fname.length() - 1);
+                if (fname.endsWith("/")) fname = fname.substring(0, fname.length() - 1);
                 if (Files.isDirectory(f)) {
                     if (recurse && SourceVersion.isIdentifier(fname)) {
-                        list(userPath,
-                             new RelativeDirectory(subdirectory, fname),
-                             fileKinds,
-                             recurse,
-                             resultList);
+                        list(
+                                userPath,
+                                new RelativeDirectory(subdirectory, fname),
+                                fileKinds,
+                                recurse,
+                                resultList);
                     }
                 } else {
                     if (isValidFile(fname, fileKinds)) {
                         try {
                             RelativeFile file = new RelativeFile(subdirectory, fname);
-                            JavaFileObject fe = PathFileObject.forDirectoryPath(JavacFileManager.this,
-                                    file.resolveAgainst(directory), userPath, file);
+                            JavaFileObject fe =
+                                    PathFileObject.forDirectoryPath(
+                                            JavacFileManager.this,
+                                            file.resolveAgainst(directory),
+                                            userPath,
+                                            file);
                             resultList.append(fe);
                         } catch (InvalidPathException e) {
                             throw new IOException("error accessing directory " + directory + e);
@@ -524,16 +527,15 @@ public class JavacFileManager extends BaseFileManager implements StandardJavaFil
             try {
                 Path f = name.resolveAgainst(userPath);
                 if (Files.exists(f))
-                    return PathFileObject.forSimplePath(JavacFileManager.this,
-                            fsInfo.getCanonicalFile(f), f);
+                    return PathFileObject.forSimplePath(
+                            JavacFileManager.this, fsInfo.getCanonicalFile(f), f);
             } catch (InvalidPathException ignore) {
             }
             return null;
         }
 
         @Override
-        public void close() throws IOException {
-        }
+        public void close() throws IOException {}
 
         @Override
         public boolean maintainsDirectoryIndex() {
@@ -546,32 +548,41 @@ public class JavacFileManager extends BaseFileManager implements StandardJavaFil
         }
     }
 
-    private static final Set<FileVisitOption> NO_FILE_VISIT_OPTIONS = Set.of();
-    private static final Set<FileVisitOption> FOLLOW_LINKS_OPTIONS = Set.of(FOLLOW_LINKS);
+    private static final Set<FileVisitOption> NO_FILE_VISIT_OPTIONS = Collections.emptySet();
+    private static final Set<FileVisitOption> FOLLOW_LINKS_OPTIONS = EnumSet.of(FOLLOW_LINKS);
 
     private final class ArchiveContainer implements Container {
         private final Path archivePath;
         private final FileSystem fileSystem;
         private final Map<RelativeDirectory, Path> packages;
 
-        public ArchiveContainer(Path archivePath) throws IOException, ProviderNotFoundException, SecurityException {
+        public ArchiveContainer(Path archivePath)
+                throws IOException, ProviderNotFoundException, SecurityException {
             this.archivePath = archivePath;
-//            if (multiReleaseValue != null && archivePath.toString().endsWith(".jar")) {
-                Map<String,String> env = Collections.singletonMap("multi-release", multiReleaseValue);
-                FileSystemProvider jarFSProvider = fsInfo.getJarFSProvider();
-                Assert.checkNonNull(jarFSProvider, "should have been caught before!");
-                this.fileSystem = jarFSProvider.newFileSystem(archivePath, env);
-//            } else {
-//                this.fileSystem = FileSystems.newFileSystem(archivePath, (ClassLoader)null);
-//            }
+            //            if (multiReleaseValue != null && archivePath.toString().endsWith(".jar"))
+            // {
+            Map<String, String> env = Collections.singletonMap("multi-release", multiReleaseValue);
+            FileSystemProvider jarFSProvider = fsInfo.getJarFSProvider();
+            Assert.checkNonNull(jarFSProvider, "should have been caught before!");
+            this.fileSystem = jarFSProvider.newFileSystem(archivePath, env);
+            //            } else {
+            //                this.fileSystem = FileSystems.newFileSystem(archivePath,
+            // (ClassLoader)null);
+            //            }
             packages = new HashMap<>();
             for (Path root : fileSystem.getRootDirectories()) {
-                Files.walkFileTree(root, NO_FILE_VISIT_OPTIONS, Integer.MAX_VALUE,
+                Files.walkFileTree(
+                        root,
+                        NO_FILE_VISIT_OPTIONS,
+                        Integer.MAX_VALUE,
                         new SimpleFileVisitor<Path>() {
                             @Override
-                            public FileVisitResult preVisitDirectory(Path dir, BasicFileAttributes attrs) {
+                            public FileVisitResult preVisitDirectory(
+                                    Path dir, BasicFileAttributes attrs) {
                                 if (isValid(dir.getFileName())) {
-                                    packages.put(new RelativeDirectory(root.relativize(dir).toString()), dir);
+                                    packages.put(
+                                            new RelativeDirectory(root.relativize(dir).toString()),
+                                            dir);
                                     return FileVisitResult.CONTINUE;
                                 } else {
                                     return FileVisitResult.SKIP_SUBTREE;
@@ -582,25 +593,30 @@ public class JavacFileManager extends BaseFileManager implements StandardJavaFil
         }
 
         /**
-         * Insert all files in subdirectory subdirectory of this archive
-         * which match fileKinds into resultList
+         * Insert all files in subdirectory subdirectory of this archive which match fileKinds into
+         * resultList
          */
         @Override
-        public void list(Path userPath,
-                         RelativeDirectory subdirectory,
-                         Set<JavaFileObject.Kind> fileKinds,
-                         boolean recurse,
-                         ListBuffer<JavaFileObject> resultList) throws IOException {
+        public void list(
+                Path userPath,
+                RelativeDirectory subdirectory,
+                Set<JavaFileObject.Kind> fileKinds,
+                boolean recurse,
+                ListBuffer<JavaFileObject> resultList)
+                throws IOException {
             Path resolvedSubdirectory = packages.get(subdirectory);
 
-            if (resolvedSubdirectory == null)
-                return ;
+            if (resolvedSubdirectory == null) return;
 
             int maxDepth = (recurse ? Integer.MAX_VALUE : 1);
-            Files.walkFileTree(resolvedSubdirectory, FOLLOW_LINKS_OPTIONS, maxDepth,
+            Files.walkFileTree(
+                    resolvedSubdirectory,
+                    FOLLOW_LINKS_OPTIONS,
+                    maxDepth,
                     new SimpleFileVisitor<Path>() {
                         @Override
-                        public FileVisitResult preVisitDirectory(Path dir, BasicFileAttributes attrs) {
+                        public FileVisitResult preVisitDirectory(
+                                Path dir, BasicFileAttributes attrs) {
                             if (isValid(dir.getFileName())) {
                                 return FileVisitResult.CONTINUE;
                             } else {
@@ -610,15 +626,16 @@ public class JavacFileManager extends BaseFileManager implements StandardJavaFil
 
                         @Override
                         public FileVisitResult visitFile(Path file, BasicFileAttributes attrs) {
-                            if (attrs.isRegularFile() && fileKinds.contains(getKind(file.getFileName().toString()))) {
-                                JavaFileObject fe = PathFileObject.forJarPath(
-                                        JavacFileManager.this, file, archivePath);
+                            if (attrs.isRegularFile()
+                                    && fileKinds.contains(getKind(file.getFileName().toString()))) {
+                                JavaFileObject fe =
+                                        PathFileObject.forJarPath(
+                                                JavacFileManager.this, file, archivePath);
                                 resultList.append(fe);
                             }
                             return FileVisitResult.CONTINUE;
                         }
                     });
-
         }
 
         private boolean isValid(Path fileName) {
@@ -662,20 +679,17 @@ public class JavacFileManager extends BaseFileManager implements StandardJavaFil
         }
     }
 
-    /**
-     * container is a directory, a zip file, or a non-existent path.
-     */
+    /** container is a directory, a zip file, or a non-existent path. */
     private boolean isValidFile(String s, Set<JavaFileObject.Kind> fileKinds) {
         JavaFileObject.Kind kind = getKind(s);
         return fileKinds.contains(kind);
     }
 
-    private static final boolean fileSystemIsCaseSensitive =
-        File.separatorChar == '/';
+    private static final boolean fileSystemIsCaseSensitive = File.separatorChar == '/';
 
-    /** Hack to make Windows case sensitive. Test whether given path
-     *  ends in a string of characters with the same case as given name.
-     *  Ignore file separators in both path and name.
+    /**
+     * Hack to make Windows case sensitive. Test whether given path ends in a string of characters
+     * with the same case as given name. Ignore file separators in both path and name.
      */
     private boolean caseMapCheck(Path f, RelativePath name) {
         if (fileSystemIsCaseSensitive) return true;
@@ -705,19 +719,18 @@ public class JavacFileManager extends BaseFileManager implements StandardJavaFil
         return j < 0;
     }
 
-    /** Flush any output resources.
-     */
-    @Override @DefinedBy(Api.COMPILER)
+    /** Flush any output resources. */
+    @Override
+    @DefinedBy(Api.COMPILER)
     public void flush() {
         contentCache.clear();
         pathsAndContainersByLocationAndRelativeDirectory.clear();
         nonIndexingContainersByLocation.clear();
     }
 
-    /**
-     * Close the JavaFileManager, releasing resources.
-     */
-    @Override @DefinedBy(Api.COMPILER)
+    /** Close the JavaFileManager, releasing resources. */
+    @Override
+    @DefinedBy(Api.COMPILER)
     public void close() throws IOException {
         if (deferredCloseTimeout > 0) {
             deferredClose();
@@ -725,7 +738,7 @@ public class JavacFileManager extends BaseFileManager implements StandardJavaFil
         }
 
         locations.close();
-        for (Container container: containers.values()) {
+        for (Container container : containers.values()) {
             container.close();
         }
         containers.clear();
@@ -734,14 +747,14 @@ public class JavacFileManager extends BaseFileManager implements StandardJavaFil
         contentCache.clear();
     }
 
-    @Override @DefinedBy(Api.COMPILER)
+    @Override
+    @DefinedBy(Api.COMPILER)
     public ClassLoader getClassLoader(Location location) {
         checkNotModuleOrientedLocation(location);
         Iterable<? extends File> path = getLocation(location);
-        if (path == null)
-            return null;
+        if (path == null) return null;
         ListBuffer<URL> lb = new ListBuffer<>();
-        for (File f: path) {
+        for (File f : path) {
             try {
                 lb.append(f.toURI().toURL());
             } catch (MalformedURLException e) {
@@ -752,13 +765,11 @@ public class JavacFileManager extends BaseFileManager implements StandardJavaFil
         return getClassLoader(lb.toArray(new URL[lb.size()]));
     }
 
-    @Override @DefinedBy(Api.COMPILER)
-    public Iterable<JavaFileObject> list(Location location,
-                                         String packageName,
-                                         Set<JavaFileObject.Kind> kinds,
-                                         boolean recurse)
-        throws IOException
-    {
+    @Override
+    @DefinedBy(Api.COMPILER)
+    public Iterable<JavaFileObject> list(
+            Location location, String packageName, Set<JavaFileObject.Kind> kinds, boolean recurse)
+            throws IOException {
         checkNotModuleOrientedLocation(location);
         // validatePackageName(packageName);
         nullCheck(packageName);
@@ -776,7 +787,8 @@ public class JavacFileManager extends BaseFileManager implements StandardJavaFil
         return results.toList();
     }
 
-    @Override @DefinedBy(Api.COMPILER)
+    @Override
+    @DefinedBy(Api.COMPILER)
     public String inferBinaryName(Location location, JavaFileObject file) {
         checkNotModuleOrientedLocation(location);
         Objects.requireNonNull(file);
@@ -788,11 +800,11 @@ public class JavacFileManager extends BaseFileManager implements StandardJavaFil
 
         if (file instanceof PathFileObject) {
             return ((PathFileObject) file).inferBinaryName(path);
-        } else
-            throw new IllegalArgumentException(file.getClass().getName());
+        } else throw new IllegalArgumentException(file.getClass().getName());
     }
 
-    @Override @DefinedBy(Api.COMPILER)
+    @Override
+    @DefinedBy(Api.COMPILER)
     public boolean isSameFile(FileObject a, FileObject b) {
         nullCheck(a);
         nullCheck(b);
@@ -801,7 +813,8 @@ public class JavacFileManager extends BaseFileManager implements StandardJavaFil
         return a.equals(b);
     }
 
-    @Override @DefinedBy(Api.COMPILER)
+    @Override
+    @DefinedBy(Api.COMPILER)
     public boolean hasLocation(Location location) {
         nullCheck(location);
         return locations.hasLocation(location);
@@ -812,12 +825,10 @@ public class JavacFileManager extends BaseFileManager implements StandardJavaFil
         return locations.hasExplicitLocation(location);
     }
 
-    @Override @DefinedBy(Api.COMPILER)
-    public JavaFileObject getJavaFileForInput(Location location,
-                                              String className,
-                                              JavaFileObject.Kind kind)
-        throws IOException
-    {
+    @Override
+    @DefinedBy(Api.COMPILER)
+    public JavaFileObject getJavaFileForInput(
+            Location location, String className, JavaFileObject.Kind kind) throws IOException {
         checkNotModuleOrientedLocation(location);
         // validateClassName(className);
         nullCheck(className);
@@ -827,29 +838,28 @@ public class JavacFileManager extends BaseFileManager implements StandardJavaFil
         return getFileForInput(location, RelativeFile.forClass(className, kind));
     }
 
-    @Override @DefinedBy(Api.COMPILER)
-    public FileObject getFileForInput(Location location,
-                                      String packageName,
-                                      String relativeName)
-        throws IOException
-    {
+    @Override
+    @DefinedBy(Api.COMPILER)
+    public FileObject getFileForInput(Location location, String packageName, String relativeName)
+            throws IOException {
         checkNotModuleOrientedLocation(location);
         // validatePackageName(packageName);
         nullCheck(packageName);
         if (!isRelativeUri(relativeName))
             throw new IllegalArgumentException("Invalid relative name: " + relativeName);
-        RelativeFile name = packageName.length() == 0
-            ? new RelativeFile(relativeName)
-            : new RelativeFile(RelativeDirectory.forPackage(packageName), relativeName);
+        RelativeFile name =
+                packageName.length() == 0
+                        ? new RelativeFile(relativeName)
+                        : new RelativeFile(RelativeDirectory.forPackage(packageName), relativeName);
         return getFileForInput(location, name);
     }
 
-    private JavaFileObject getFileForInput(Location location, RelativeFile name) throws IOException {
+    private JavaFileObject getFileForInput(Location location, RelativeFile name)
+            throws IOException {
         Iterable<? extends Path> path = getLocationAsPaths(location);
-        if (path == null)
-            return null;
+        if (path == null) return null;
 
-        for (Path file: path) {
+        for (Path file : path) {
             JavaFileObject fo = getContainer(file).getFileObject(file, name);
 
             if (fo != null) {
@@ -859,13 +869,11 @@ public class JavacFileManager extends BaseFileManager implements StandardJavaFil
         return null;
     }
 
-    @Override @DefinedBy(Api.COMPILER)
-    public JavaFileObject getJavaFileForOutput(Location location,
-                                               String className,
-                                               JavaFileObject.Kind kind,
-                                               FileObject sibling)
-        throws IOException
-    {
+    @Override
+    @DefinedBy(Api.COMPILER)
+    public JavaFileObject getJavaFileForOutput(
+            Location location, String className, JavaFileObject.Kind kind, FileObject sibling)
+            throws IOException {
         checkOutputLocation(location);
         // validateClassName(className);
         nullCheck(className);
@@ -875,29 +883,25 @@ public class JavacFileManager extends BaseFileManager implements StandardJavaFil
         return getFileForOutput(location, RelativeFile.forClass(className, kind), sibling);
     }
 
-    @Override @DefinedBy(Api.COMPILER)
-    public FileObject getFileForOutput(Location location,
-                                       String packageName,
-                                       String relativeName,
-                                       FileObject sibling)
-        throws IOException
-    {
+    @Override
+    @DefinedBy(Api.COMPILER)
+    public FileObject getFileForOutput(
+            Location location, String packageName, String relativeName, FileObject sibling)
+            throws IOException {
         checkOutputLocation(location);
         // validatePackageName(packageName);
         nullCheck(packageName);
         if (!isRelativeUri(relativeName))
             throw new IllegalArgumentException("Invalid relative name: " + relativeName);
-        RelativeFile name = packageName.length() == 0
-            ? new RelativeFile(relativeName)
-            : new RelativeFile(RelativeDirectory.forPackage(packageName), relativeName);
+        RelativeFile name =
+                packageName.length() == 0
+                        ? new RelativeFile(relativeName)
+                        : new RelativeFile(RelativeDirectory.forPackage(packageName), relativeName);
         return getFileForOutput(location, name, sibling);
     }
 
-    private JavaFileObject getFileForOutput(Location location,
-                                            RelativeFile fileName,
-                                            FileObject sibling)
-        throws IOException
-    {
+    private JavaFileObject getFileForOutput(
+            Location location, RelativeFile fileName, FileObject sibling) throws IOException {
         Path dir;
         if (location == CLASS_OUTPUT) {
             if (getClassOutDir() != null) {
@@ -917,7 +921,7 @@ public class JavacFileManager extends BaseFileManager implements StandardJavaFil
         } else {
             Iterable<? extends Path> path = locations.getLocation(location);
             dir = null;
-            for (Path f: path) {
+            for (Path f : path) {
                 dir = f;
                 break;
             }
@@ -934,75 +938,76 @@ public class JavacFileManager extends BaseFileManager implements StandardJavaFil
         }
     }
 
-    @Override @DefinedBy(Api.COMPILER)
+    @Override
+    @DefinedBy(Api.COMPILER)
     public Iterable<? extends JavaFileObject> getJavaFileObjectsFromFiles(
-        Iterable<? extends File> files)
-    {
+            Iterable<? extends File> files) {
         ArrayList<PathFileObject> result;
         if (files instanceof Collection<?>)
             result = new ArrayList<>(((Collection<?>) files).size());
-        else
-            result = new ArrayList<>();
-        for (File f: files) {
+        else result = new ArrayList<>();
+        for (File f : files) {
             Objects.requireNonNull(f);
             Path p = f.toPath();
-            result.add(PathFileObject.forSimplePath(this,
-                    fsInfo.getCanonicalFile(p), p));
+            result.add(PathFileObject.forSimplePath(this, fsInfo.getCanonicalFile(p), p));
         }
         return result;
     }
 
-    @Override @DefinedBy(Api.COMPILER)
-    public Iterable<? extends JavaFileObject> getJavaFileObjectsFromPaths(Collection<? extends Path> paths) {
+    @Override
+    @DefinedBy(Api.COMPILER)
+    public Iterable<? extends JavaFileObject> getJavaFileObjectsFromPaths(
+            Collection<? extends Path> paths) {
         ArrayList<PathFileObject> result;
         if (paths != null) {
             result = new ArrayList<>(paths.size());
-            for (Path p: paths)
-                result.add(PathFileObject.forSimplePath(this,
-                        fsInfo.getCanonicalFile(p), p));
+            for (Path p : paths)
+                result.add(PathFileObject.forSimplePath(this, fsInfo.getCanonicalFile(p), p));
         } else {
             result = new ArrayList<>();
         }
         return result;
     }
 
-    @Override @DefinedBy(Api.COMPILER)
+    @Override
+    @DefinedBy(Api.COMPILER)
     public Iterable<? extends JavaFileObject> getJavaFileObjects(File... files) {
         return getJavaFileObjectsFromFiles(Arrays.asList(nullCheck(files)));
     }
 
-    @Override @DefinedBy(Api.COMPILER)
+    @Override
+    @DefinedBy(Api.COMPILER)
     public Iterable<? extends JavaFileObject> getJavaFileObjects(Path... paths) {
         return getJavaFileObjectsFromPaths(Arrays.asList(nullCheck(paths)));
     }
 
-    @Override @DefinedBy(Api.COMPILER)
-    public void setLocation(Location location,
-                            Iterable<? extends File> searchpath)
-        throws IOException
-    {
+    @Override
+    @DefinedBy(Api.COMPILER)
+    public void setLocation(Location location, Iterable<? extends File> searchpath)
+            throws IOException {
         nullCheck(location);
         locations.setLocation(location, asPaths(searchpath));
         clearCachesForLocation(location);
     }
 
-    @Override @DefinedBy(Api.COMPILER)
-    public void setLocationFromPaths(Location location,
-                            Collection<? extends Path> searchpath)
-        throws IOException
-    {
+    @Override
+    @DefinedBy(Api.COMPILER)
+    public void setLocationFromPaths(Location location, Collection<? extends Path> searchpath)
+            throws IOException {
         nullCheck(location);
         locations.setLocation(location, nullCheck(searchpath));
         clearCachesForLocation(location);
     }
 
-    @Override @DefinedBy(Api.COMPILER)
+    @Override
+    @DefinedBy(Api.COMPILER)
     public Iterable<? extends File> getLocation(Location location) {
         nullCheck(location);
         return asFiles(locations.getLocation(location));
     }
 
-    @Override @DefinedBy(Api.COMPILER)
+    @Override
+    @DefinedBy(Api.COMPILER)
     public Collection<? extends Path> getLocationAsPaths(Location location) {
         nullCheck(location);
         return locations.getLocation(location);
@@ -1011,17 +1016,17 @@ public class JavacFileManager extends BaseFileManager implements StandardJavaFil
     private java.util.List<PathAndContainer> pathsAndContainers(
             Location location, RelativeDirectory relativeDirectory) throws IOException {
         try {
-            return pathsAndContainersByLocationAndRelativeDirectory.computeIfAbsent(
-                    location, this::indexPathsAndContainersByRelativeDirectory)
-                .computeIfAbsent(
-                    relativeDirectory, d -> nonIndexingContainersByLocation.get(location));
+            return pathsAndContainersByLocationAndRelativeDirectory
+                    .computeIfAbsent(location, this::indexPathsAndContainersByRelativeDirectory)
+                    .computeIfAbsent(
+                            relativeDirectory, d -> nonIndexingContainersByLocation.get(location));
         } catch (UncheckedIOException e) {
             throw e.getCause();
         }
     }
 
-    private Map<RelativeDirectory, java.util.List<PathAndContainer>> indexPathsAndContainersByRelativeDirectory(
-            Location location) {
+    private Map<RelativeDirectory, java.util.List<PathAndContainer>>
+            indexPathsAndContainersByRelativeDirectory(Location location) {
         Map<RelativeDirectory, java.util.List<PathAndContainer>> result = new HashMap<>();
         java.util.List<PathAndContainer> allPathsAndContainers = pathsAndContainers(location);
 
@@ -1041,7 +1046,7 @@ public class JavacFileManager extends BaseFileManager implements StandardJavaFil
             if (container.maintainsDirectoryIndex()) {
                 for (RelativeDirectory directory : container.indexedDirectories()) {
                     result.computeIfAbsent(directory, d -> new ArrayList<>(nonIndexingContainers))
-                          .add(pathAndContainer);
+                            .add(pathAndContainer);
                 }
             }
         }
@@ -1063,8 +1068,7 @@ public class JavacFileManager extends BaseFileManager implements StandardJavaFil
         if (paths == null) {
             return List.nil();
         }
-        java.util.List<PathAndContainer> pathsAndContainers =
-            new ArrayList<>(paths.size());
+        java.util.List<PathAndContainer> pathsAndContainers = new ArrayList<>(paths.size());
         for (Path path : paths) {
             Container container;
             try {
@@ -1072,7 +1076,8 @@ public class JavacFileManager extends BaseFileManager implements StandardJavaFil
             } catch (IOException e) {
                 throw new UncheckedIOException(e);
             }
-            pathsAndContainers.add(new PathAndContainer(path, container, pathsAndContainers.size()));
+            pathsAndContainers.add(
+                    new PathAndContainer(path, container, pathsAndContainers.size()));
         }
         return pathsAndContainers;
     }
@@ -1095,19 +1100,23 @@ public class JavacFileManager extends BaseFileManager implements StandardJavaFil
 
         @Override
         public boolean equals(Object o) {
-            return (o instanceof PathAndContainer)
-                    && path.equals(((PathAndContainer) o).path)
-                    && container.equals(((PathAndContainer) o).container)
-                    && index == ((PathAndContainer) o).index;
+            if (o == null || !(o instanceof PathAndContainer)) {
+                return false;
+            }
+            PathAndContainer that = (PathAndContainer) o;
+            return path.equals(that.path)
+                    && container.equals(that.container)
+                    && index == this.index;
         }
 
         @Override
         public int hashCode() {
-          return Objects.hash(path, container, index);
+            return Objects.hash(path, container, index);
         }
     }
 
-    @Override @DefinedBy(Api.COMPILER)
+    @Override
+    @DefinedBy(Api.COMPILER)
     public boolean contains(Location location, FileObject fo) throws IOException {
         nullCheck(location);
         nullCheck(fo);
@@ -1123,44 +1132,36 @@ public class JavacFileManager extends BaseFileManager implements StandardJavaFil
         return locations.getOutputLocation(SOURCE_OUTPUT);
     }
 
-    @Override @DefinedBy(Api.COMPILER)
+    @Override
+    @DefinedBy(Api.COMPILER)
     public Location getLocationForModule(Location location, String moduleName) throws IOException {
         checkModuleOrientedOrOutputLocation(location);
         nullCheck(moduleName);
-        if (location == SOURCE_OUTPUT && getSourceOutDir() == null)
-            location = CLASS_OUTPUT;
+        if (location == SOURCE_OUTPUT && getSourceOutDir() == null) location = CLASS_OUTPUT;
         return locations.getLocationForModule(location, moduleName);
     }
 
-    @Override @DefinedBy(Api.COMPILER)
-    public <S> ServiceLoader<S> getServiceLoader(Location location, Class<S> service) throws IOException {
-        nullCheck(location);
-        nullCheck(service);
-        getClass().getModule().addUses(service);
-        if (location.isModuleOrientedLocation()) {
-            Collection<Path> paths = locations.getLocation(location);
-            ModuleFinder finder = ModuleFinder.of(paths.toArray(new Path[paths.size()]));
-            ModuleLayer bootLayer = ModuleLayer.boot();
-            Configuration cf = bootLayer.configuration().resolveAndBind(ModuleFinder.of(), finder, Collections.emptySet());
-            ModuleLayer layer = bootLayer.defineModulesWithOneLoader(cf, ClassLoader.getSystemClassLoader());
-            return ServiceLoader.load(layer, service);
-        } else {
-            return ServiceLoader.load(service, getClassLoader(location));
-        }
+    @Override
+    @DefinedBy(Api.COMPILER)
+    public <S> ServiceLoader<S> getServiceLoader(Location location, Class<S> service)
+            throws IOException {
+        throw new UnsupportedOperationException();
     }
 
-    @Override @DefinedBy(Api.COMPILER)
+    @Override
+    @DefinedBy(Api.COMPILER)
     public Location getLocationForModule(Location location, JavaFileObject fo) throws IOException {
         checkModuleOrientedOrOutputLocation(location);
-        if (!(fo instanceof PathFileObject))
-            return null;
+        if (!(fo instanceof PathFileObject)) return null;
         Path p = Locations.normalize(((PathFileObject) fo).path);
-            // need to find p in location
+        // need to find p in location
         return locations.getLocationForModule(location, p);
     }
 
-    @Override @DefinedBy(Api.COMPILER)
-    public void setLocationForModule(Location location, String moduleName, Collection<? extends Path> paths)
+    @Override
+    @DefinedBy(Api.COMPILER)
+    public void setLocationForModule(
+            Location location, String moduleName, Collection<? extends Path> paths)
             throws IOException {
         nullCheck(location);
         checkModuleOrientedOrOutputLocation(location);
@@ -1168,44 +1169,40 @@ public class JavacFileManager extends BaseFileManager implements StandardJavaFil
         clearCachesForLocation(location);
     }
 
-    @Override @DefinedBy(Api.COMPILER)
+    @Override
+    @DefinedBy(Api.COMPILER)
     public String inferModuleName(Location location) {
         checkNotModuleOrientedLocation(location);
         return locations.inferModuleName(location);
     }
 
-    @Override @DefinedBy(Api.COMPILER)
+    @Override
+    @DefinedBy(Api.COMPILER)
     public Iterable<Set<Location>> listLocationsForModules(Location location) throws IOException {
         checkModuleOrientedOrOutputLocation(location);
         return locations.listLocationsForModules(location);
     }
 
-    @Override @DefinedBy(Api.COMPILER)
+    @Override
+    @DefinedBy(Api.COMPILER)
     public Path asPath(FileObject file) {
         if (file instanceof PathFileObject) {
             return ((PathFileObject) file).path;
-        } else
-            throw new IllegalArgumentException(file.getName());
+        } else throw new IllegalArgumentException(file.getName());
     }
 
     /**
-     * Enforces the specification of a "relative" name as used in
-     * {@linkplain #getFileForInput(Location,String,String)
-     * getFileForInput}.  This method must follow the rules defined in
-     * that method, do not make any changes without consulting the
-     * specification.
+     * Enforces the specification of a "relative" name as used in {@linkplain
+     * #getFileForInput(Location,String,String) getFileForInput}. This method must follow the rules
+     * defined in that method, do not make any changes without consulting the specification.
      */
     protected static boolean isRelativeUri(URI uri) {
-        if (uri.isAbsolute())
-            return false;
+        if (uri.isAbsolute()) return false;
         String path = uri.normalize().getPath();
-        if (path.length() == 0 /* isEmpty() is mustang API */)
-            return false;
+        if (path.length() == 0 /* isEmpty() is mustang API */) return false;
         if (!path.equals(uri.getPath())) // implicitly checks for embedded . and ..
-            return false;
-        if (path.startsWith("/") || path.startsWith("./") || path.startsWith("../"))
-            return false;
-        return true;
+        return false;
+        return !(path.startsWith("/") || path.startsWith("./") || path.startsWith("../"));
     }
 
     // Convenience method
@@ -1218,48 +1215,44 @@ public class JavacFileManager extends BaseFileManager implements StandardJavaFil
     }
 
     /**
-     * Converts a relative file name to a relative URI.  This is
-     * different from File.toURI as this method does not canonicalize
-     * the file before creating the URI.  Furthermore, no schema is
+     * Converts a relative file name to a relative URI. This is different from File.toURI as this
+     * method does not canonicalize the file before creating the URI. Furthermore, no schema is
      * used.
+     *
      * @param file a relative file name
      * @return a relative URI
-     * @throws IllegalArgumentException if the file name is not
-     * relative according to the definition given in {@link
-     * javax.tools.JavaFileManager#getFileForInput}
+     * @throws IllegalArgumentException if the file name is not relative according to the definition
+     *     given in {@link javax.tools.JavaFileManager#getFileForInput}
      */
     public static String getRelativeName(File file) {
         if (!file.isAbsolute()) {
             String result = file.getPath().replace(File.separatorChar, '/');
-            if (isRelativeUri(result))
-                return result;
+            if (isRelativeUri(result)) return result;
         }
         throw new IllegalArgumentException("Invalid relative path: " + file);
     }
 
     /**
-     * Get a detail message from an IOException.
-     * Most, but not all, instances of IOException provide a non-null result
-     * for getLocalizedMessage().  But some instances return null: in these
-     * cases, fall back to getMessage(), and if even that is null, return the
-     * name of the exception itself.
+     * Get a detail message from an IOException. Most, but not all, instances of IOException provide
+     * a non-null result for getLocalizedMessage(). But some instances return null: in these cases,
+     * fall back to getMessage(), and if even that is null, return the name of the exception itself.
+     *
      * @param e an IOException
      * @return a string to include in a compiler diagnostic
      */
     public static String getMessage(IOException e) {
         String s = e.getLocalizedMessage();
-        if (s != null)
-            return s;
+        if (s != null) return s;
         s = e.getMessage();
-        if (s != null)
-            return s;
+        if (s != null) return s;
         return e.toString();
     }
 
     private void checkOutputLocation(Location location) {
         Objects.requireNonNull(location);
         if (!location.isOutputLocation())
-            throw new IllegalArgumentException("location is not an output location: " + location.getName());
+            throw new IllegalArgumentException(
+                    "location is not an output location: " + location.getName());
     }
 
     private void checkModuleOrientedOrOutputLocation(Location location) {
@@ -1273,7 +1266,8 @@ public class JavacFileManager extends BaseFileManager implements StandardJavaFil
     private void checkNotModuleOrientedLocation(Location location) {
         Objects.requireNonNull(location);
         if (location.isModuleOrientedLocation())
-            throw new IllegalArgumentException("location is module-oriented: " + location.getName());
+            throw new IllegalArgumentException(
+                    "location is module-oriented: " + location.getName());
     }
 
     /* Converters between files and paths.
@@ -1281,45 +1275,45 @@ public class JavacFileManager extends BaseFileManager implements StandardJavaFil
      */
 
     private static Iterable<Path> asPaths(final Iterable<? extends File> files) {
-        if (files == null)
-            return null;
+        if (files == null) return null;
 
-        return () -> new Iterator<Path>() {
-            Iterator<? extends File> iter = files.iterator();
+        return () ->
+                new Iterator<Path>() {
+                    Iterator<? extends File> iter = files.iterator();
 
-            @Override
-            public boolean hasNext() {
-                return iter.hasNext();
-            }
+                    @Override
+                    public boolean hasNext() {
+                        return iter.hasNext();
+                    }
 
-            @Override
-            public Path next() {
-                return iter.next().toPath();
-            }
-        };
+                    @Override
+                    public Path next() {
+                        return iter.next().toPath();
+                    }
+                };
     }
 
     private static Iterable<File> asFiles(final Iterable<? extends Path> paths) {
-        if (paths == null)
-            return null;
+        if (paths == null) return null;
 
-        return () -> new Iterator<File>() {
-            Iterator<? extends Path> iter = paths.iterator();
+        return () ->
+                new Iterator<File>() {
+                    Iterator<? extends Path> iter = paths.iterator();
 
-            @Override
-            public boolean hasNext() {
-                return iter.hasNext();
-            }
+                    @Override
+                    public boolean hasNext() {
+                        return iter.hasNext();
+                    }
 
-            @Override
-            public File next() {
-                try {
-                    return iter.next().toFile();
-                } catch (UnsupportedOperationException e) {
-                    throw new IllegalStateException(e);
-                }
-            }
-        };
+                    @Override
+                    public File next() {
+                        try {
+                            return iter.next().toFile();
+                        } catch (UnsupportedOperationException e) {
+                            throw new IllegalStateException(e);
+                        }
+                    }
+                };
     }
 
     @Override
